bpo-38785: Prevent asyncio from crashing  (GH-17144)

if parent `__init__` is not called from a constructor of object derived from `asyncio.Future`

https://bugs.python.org/issue38785
(cherry picked from commit dad6be5ffe48beb74fad78cf758b886afddc7aed)

Co-authored-by: Andrew Svetlov <andrew.svetlov@gmail.com>